VR: Update recommended WebVR resolution when density changes.

Bug: 767589
Change-Id: If3127d75eb4b7645979e478c0e5ce82916a27feb
Reviewed-on: https://chromium-review.googlesource.com/677958
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504411}