device/vr/android/gvr/gvr_device.h
@@ -6,6 +6,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef DEVICE_VR_ANDROID_GVR_DEVICE_H
 #define DEVICE_VR_ANDROID_GVR_DEVICE_H
 
+#include <jni.h>
+
 #include <memory>
 
 #include "base/android/scoped_java_ref.h"
@@ -37,6 +39,9 @@ class DEVICE_VR_EXPORT GvrDevice : public VRDevice {
   void OnListeningForActivateChanged(VRDisplayImpl* display) override;
   void PauseTracking() override;
   void ResumeTracking() override;
+
+  void OnDIPScaleChanged(JNIEnv* env,
+                         const base::android::JavaRef<jobject>& obj);
 
  private:
   GvrDevice();
